got the basic functionality in place. Now I need to design the logger to send errors to this service

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,7 +7,7 @@
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
 		<link rel="shortcut icon" href="AppreciateLogo_4.png" />
-		<title>AppreciateCO Error System</title>
+		<title>Error Tracker</title>
 	</head>
 	<body>
 		<noscript>
