--- a/src/client/css/main.scss
+++ b/src/client/css/main.scss
@@ -1,25 +1,42 @@
-#sign-in{
-    margin: auto;
-    padding: 0;
-    width: 350px;
-    min-width: 350px;
+#home-container {
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;
+	grid-template-rows: 10% auto;
+}
+
+#sign-in {
+	margin: auto;
+	padding: 0;
+	width: 350px;
+	min-width: 350px;
 }
 
 #nav-pane {
-    border: .5px solid #2665C4;
-    border-radius: 5px;
-    width: 20%;
-    margin: 5px;
+	border: 0.5px solid #2665c4;
+	border-radius: 5px;
+	width: 20%;
+	margin: 5px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
 }
 
 .nav {
-    color: #2665C4;
-    font-size: 14px;
-    text-align: left;
-    padding-left: 5px;
-    text-decoration: none;
+	color: #2665c4;
+	font-size: 14px;
+	text-align: left;
+	padding-left: 5px;
+	text-decoration: none;
 }
 
-.userNotify{
-    color: red;
+#working-pane {
+	grid-column-start: 2;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.userNotify {
+	color: red;
 }
