--- a/src/client/css/main.scss
+++ b/src/client/css/main.scss
@@ -1,7 +1,8 @@
 #home-container {
+	padding: 10px;
 	display: grid;
-	grid-template-columns: 100%;
-	grid-template-rows: 10% 20% auto;
+	grid-template-columns: 45% auto 25%;
+	grid-template-rows: 20% 20% auto;
 }
 
 #sign-in {
@@ -11,28 +12,17 @@
 	min-width: 350px;
 }
 
-#nav-pane {
-	border: 0.5px solid #2665c4;
-	border-radius: 5px;
-	width: 20%;
-	margin: 5px;
-	grid-row-start: 2;
-	grid-row-end: 3;
-}
-
-.nav {
-	color: #2665c4;
-	font-size: 14px;
-	text-align: left;
-	padding-left: 5px;
-	text-decoration: none;
-}
-
-#working-pane {
-	padding: 10px;
+#user {
+	grid-row-start: 1;
+	grid-row-end: 2;
+	grid-column-start: 3;
+	grid-column-end: 4;
+	justify-items: end;
 }
 
 #error-list {
+	grid-column-start: 1;
+	grid-column-end: 4;
 	grid-row-start: 2;
 	grid-row-end: 3;
 	overflow-y: scroll;
